--- a/project-1/app/common.css
+++ b/project-1/app/common.css
@@ -14,6 +14,8 @@
     
     width: 30%;
     height: 100vh;
+    border: 2px solid black;
+
 }
 .main-container {
    
@@ -51,7 +53,7 @@
     color: black;
 }
 .footer-container {
-    height: 2vw;
+    
     border: 2px solid black;
     display: flex;
     align-items: center;
