--- a/project-1/app/home.css
+++ b/project-1/app/home.css
@@ -6,9 +6,67 @@
 }
 
 .main-container-in {
-    height: 100vh;
+    height: fit-content;
+    width: 100%;
+
+    
+   
+}
+.main-one {
+    height: 16.80vh;
+    width: 100%;
+    border: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+.main-img {
+    width: 10%;
+    
+}
+.main-img img {
+    width: 60%;
+}
+.main-id {
+    font-size: 23px;
+}
+.main-two {
+    text-align: center;
+    padding: 20px;
+    font-size: 20px;
+
+    
+}
+.main-two span {
+    color: rgb(25, 11, 245);
+
+}
+.main-three {
+    height: 30vw;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.box-cm {
+    height: 20vw;
+    width: 25%;
+    border: 0.1px solid black;
+    border-radius: 20px;
+}
+.img-box {
+    height: 15vw;
+    width: 100%;
+    
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.img-box img {
+    width: 60%;
 
+}
+.text-box {
+    text-align: center;
 }
